--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,61 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/mainLayout"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/slider"
+        android:src="@drawable/slider"
+        android:layout_marginLeft="59px"
+        android:layout_marginTop="189px"
+        android:adjustViewBounds="true"
+        android:maxWidth="0dp"
+        android:maxHeight="0dp" />
+
+    <!--<ImageView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:id="@+id/ballButton"-->
+    <!--android:layout_marginLeft="53.5dp"-->
+    <!--android:layout_marginStart="59dp"-->
+    <!--android:adjustViewBounds="true"-->
+    <!--android:maxWidth="80dp"-->
+    <!--android:src="@drawable/joyball"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:layout_alignParentLeft="true"-->
+    <!--android:layout_alignParentStart="true" />-->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text=""
+        android:id="@+id/logger"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Switch
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gyroToggle"
+        android:textOn="@string/switch_on"
+        android:textOff="@string/switch_off"
+        android:layout_marginTop="77dp"
+        android:layout_below="@+id/slider"
+        android:layout_toLeftOf="@+id/logger"
+        android:layout_toStartOf="@+id/logger"
+        android:layout_marginRight="119dp"
+        android:layout_marginEnd="119dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -11,6 +63,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text=""
         android:id="@+id/textView1"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@+id/gyroToggle"
+        android:layout_toLeftOf="@+id/gyroToggle"
+        android:layout_toStartOf="@+id/gyroToggle"
+        android:layout_marginRight="34dp"
+        android:layout_marginEnd="34dp" />
 
 </RelativeLayout>
